[gd_scene load_steps=12 format=2]

[ext_resource path="res://Misc/Fonts/Neufreit-ExtraBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/Lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://Screens/CharacterSelect/CharacterSelect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Misc/Themes/Main.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.890196, 0.0980392, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.117647, 1, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="GridContainer" parent="Main"]
margin_right = 490.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[node name="Options" type="VBoxContainer" parent="Main"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Options"]
margin_right = 490.0
margin_bottom = 278.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="IPStuff" type="VBoxContainer" parent="Main/Options/VBoxContainer"]
margin_left = 338.0
margin_right = 490.0
margin_bottom = 82.0
size_flags_horizontal = 8

[node name="LocalIP" type="Label" parent="Main/Options/VBoxContainer/IPStuff"]
margin_right = 152.0
margin_bottom = 38.0
text = "192.168.0.1"
align = 2

[node name="GlobalIP" type="Label" parent="Main/Options/VBoxContainer/IPStuff"]
visible = false
margin_top = 18.0
margin_right = 490.0
margin_bottom = 32.0
align = 2

[node name="UPNP" type="Button" parent="Main/Options/VBoxContainer/IPStuff"]
margin_top = 42.0
margin_right = 152.0
margin_bottom = 82.0
rect_min_size = Vector2( 100, 40 )
focus_mode = 0
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "UPNP"

[node name="Mode" type="OptionButton" parent="Main/Options/VBoxContainer"]
margin_top = 92.0
margin_right = 490.0
margin_bottom = 130.0
rect_min_size = Vector2( 300, 0 )
text = "Game Mode"

[node name="Map" type="OptionButton" parent="Main/Options/VBoxContainer"]
margin_top = 140.0
margin_right = 490.0
margin_bottom = 178.0
text = "Map"

[node name="Teams" type="CheckBox" parent="Main/Options/VBoxContainer"]
margin_left = 343.0
margin_top = 188.0
margin_right = 490.0
margin_bottom = 226.0
focus_mode = 0
size_flags_horizontal = 8
text = "In Teams"
align = 2

[node name="Self" type="VBoxContainer" parent="Main/Options"]
margin_top = 282.0
margin_right = 490.0
margin_bottom = 560.0
size_flags_vertical = 3
alignment = 1

[node name="Character" type="HBoxContainer" parent="Main/Options/Self"]
margin_right = 490.0
margin_bottom = 174.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Icon" type="TextureRect" parent="Main/Options/Self/Character"]
margin_right = 150.0
margin_bottom = 174.0
rect_min_size = Vector2( 150, 150 )
expand = true
stretch_mode = 6

[node name="Name" type="Label" parent="Main/Options/Self/Character"]
margin_left = 170.0
margin_top = 68.0
margin_right = 248.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
text = "None"

[node name="Change" type="Button" parent="Main/Options/Self/Character"]
margin_left = 268.0
margin_top = 62.0
margin_right = 490.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 11
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Select Character"

[node name="Ready" type="Button" parent="Main/Options/Self"]
margin_left = 240.0
margin_top = 178.0
margin_right = 490.0
margin_bottom = 278.0
rect_min_size = Vector2( 250, 100 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 5
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
toggle_mode = true
text = "Ready"

[node name="CharacterSelect" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Leave" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 100.0
rect_min_size = Vector2( 100, 30 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Main/Options/VBoxContainer/IPStuff/UPNP" to="." method="_on_UPNP_toggled"]
[connection signal="item_selected" from="Main/Options/VBoxContainer/Mode" to="." method="_on_Mode_item_selected"]
[connection signal="item_selected" from="Main/Options/VBoxContainer/Map" to="." method="_on_Map_item_selected"]
[connection signal="toggled" from="Main/Options/VBoxContainer/Teams" to="." method="_on_Teams_toggled"]
[connection signal="pressed" from="Main/Options/Self/Character/Change" to="." method="_on_Change_pressed"]
[connection signal="toggled" from="Main/Options/Self/Ready" to="." method="_on_Ready_toggled"]
[connection signal="characterSelected" from="CharacterSelect" to="." method="_on_CharacterSelect_characterSelected"]
[connection signal="pressed" from="Leave" to="." method="_on_Leave_pressed"]
